# sidescape

./: .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
.agents/: issue-implementer.md
.claude/agents/: issue-implementer.md
.github/workflows/: ci.yml  release.yml
docs/: art-style.md  assets.md  backdrop-gen.md  design.md  economy.md  icon-gen.md  sprite-gen.md
docs/adr/: 0001-caller-pumped-deep-engine.md  0002-combat-style-dual-maps.md
docs/agents/: domain.md
e2e/: browser-degraded.spec.ts  icon-sizing.spec.ts  loadout-row.spec.ts  loot-strip.spec.ts  management-card-scroll-shadows.spec.ts  prop-scene-separation.spec.ts  scene-ground-plane.spec.ts  settings-popover-scale.spec.ts
scripts/: set-version.mjs
scripts/art/: art-ramp-isolation.test.ts  backdrop-generator.test.ts  backdrops.mjs  build-overlays.mjs  contact-sheet.mjs  equipment-icons.mjs  generate.mjs  glacier-backdrop-assets.test.ts  hsl-gamut.test.ts  icon-canvas.mjs  icon-canvas.test.ts  icon-source.mjs  icon-source.test.ts  icons.mjs  ingest-backdrop.mjs  ingest-icon.mjs  ingest-overlay.mjs  ingest-sprite-core.mjs  ingest-sprite.mjs  ingest-sprite.test.ts  overlays.mjs  palettes.mjs  sprite-assets.test.ts  sprite-contact-sheet.mjs  sprites.mjs  trace-core.mjs  trace-core.test.ts  trace-reference.mjs  write-png.mjs
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/core/: rng.ts  (+18 more)
(+111 files in other folders)
